--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -24,14 +24,14 @@
 
 \frontmatter % выключает нумерацию ВСЕГО; здесь начинаются ненумерованные главы: реферат, введение, глоссарий, сокращения и прочее.
 
-\maketitle %создает титульную страницу
+%% \maketitle %создает титульную страницу
 
 
-\begin{executors}
-\personalSignature{Первый исполнитель}{ФИО}
+%% \begin{executors}
+%% \personalSignature{Первый исполнитель}{ФИО}
 
-\personalSignature{Второй исполнитель}{ФИО}
-\end{executors}
+%% \personalSignature{Второй исполнитель}{ФИО}
+%% \end{executors}
 
 
 %\listoffigures                         % Список рисунков
@@ -56,16 +56,17 @@
 
 \mainmatter % это включает нумерацию глав и секций в документе ниже
 
-\include{20-analysis}
-\include{30-design}
-\include{40-impl}
-\include{50-research}
-\include{60-economics}
-\include{70-bzd}
+\include{1-1-scope}
+%% \include{20-analysis}
+%% \include{30-design}
+%% \include{40-impl}
+%% \include{50-research}
+%% \include{60-economics}
+%% \include{70-bzd}
 
 \backmatter %% Здесь заканчивается нумерованная часть документа и начинаются ссылки и
             
-\include{80-conclusion}%% заключение
+%% \include{80-conclusion}%% заключение
 
 
 \include{81-biblio}
