migrated 1-2-current-state

--- a/tex/1-1-scope.tex
+++ b/tex/1-1-scope.tex
@@ -24,7 +24,7 @@
 нескольких языков вне зависимости от объемов проекта или вовлекаемой предметной области.
 Ситуация становится сложнее со временем, так как создание новых технологий разработки
 часто влечет за собой формирование определенной нотации или языка для управления или конфигурации.
-Например, это может касаться таких повсеместных технологий как СУБД\Define{СУБД}{система управления базами данных}, систем сборки,
+Например, это может касаться таких повсеместных технологий как СУБД\Abbrev{СУБД}{система управления базами данных}, систем сборки,
 серверов приложений или скриптов развертывания.
 
 Для наглядности, можно привести следующие языки, нередко фигурирующие в составе современных программных проектов:
