--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -104,3 +104,91 @@ abstract="Successful software requires constant modifications. To guarantee the 
 isbn="978-3-031-43703-8"
 }
 
+@INPROCEEDINGS{pangea,
+
+  author={Caracciolo, Andrea and Chis, Andrei and Spasojevic, Boris and Lungu, Mircea},
+
+  booktitle={2014 IEEE 14th International Working Conference on Source Code Analysis and Manipulation}, 
+
+  title={Pangea: A Workbench for Statically Analyzing Multi-language Software Corpora}, 
+
+  year={2014},
+
+  volume={},
+
+  number={},
+
+  pages={71-76},
+
+  keywords={Java;Object oriented modeling;Analytical models;Software systems;Load modeling;Software corpora;static analysis;empirical study;multi-language},
+
+  doi={10.1109/SCAM.2014.39}}
+
+@inproceedings{moose,
+author = {Nierstrasz, Oscar and Ducasse, Stéphane and Gîrba, Tudor},
+year = {2005},
+month = {01},
+pages = {1-10},
+title = {The story of Moose: an agile reengineering environment},
+volume = {30},
+journal = {ACM Sigsoft Software Engineering Notes},
+doi = {10.1145/1095430.1081707}
+}
+
+@article{famix,
+author = {Demeyer, Serge and Tichelaar, S. and Ducasse, Stéphane},
+year = {2001},
+month = {01},
+pages = {},
+title = {FAMIX 2. 1-the FAMOOS information exchange model}
+}
+
+@online{ecma262,
+  title = {EcmaScript 262},
+  year = {2024},
+  url = {https://tc39.es/ecma262/},
+  urldate = {23.03.2024},
+  language =     "russian"
+}
+
+@online{JNI,
+  title = {Java Native Interface},
+  year = {2024},
+  url = {https://docs.oracle.com/en/java/javase/11/docs/specs/jni/intro.html#java-native-interface-overview},
+  urldate = {02.04.2024},
+  language =     "russian"
+}
+
+@inproceedings{MLSA,
+author = {Bogar, Anne and Lyons, Damian and Baird, David},
+year = {2018},
+month = {01},
+pages = {362-371},
+title = {Lightweight Call-Graph Construction for Multilingual Software Analysis},
+doi = {10.5220/0006911803620371}
+}
+
+@article{SNDGA,
+  title={Improving the modularization quality of heterogeneous multi-programming software systems by unifying structural and semantic concepts},
+  author={Masoud Kargar and Ayaz Isazadeh and Habib Izadkhah},
+  journal={The Journal of Supercomputing},
+  year={2019},
+  volume={76},
+  pages={87 - 121},
+  url={https://api.semanticscholar.org/CorpusID:202733767}
+}
+
+@article{polycall,
+  title={Effective Call Graph Construction for Multilingual Programs},
+  author={Zheng W. \& Hua B.},
+  year={2023},
+  url={https://csslab-ustc.github.io/publications/2023/call-graph.pdf}
+}
+
+@online{wasm,
+  title = {Webassembly},
+  year = {2024},
+  url = {https://webassembly.org/},
+  urldate = {05.04.2024},
+  language =     "russian"
+}
