--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -57,6 +57,7 @@
 \mainmatter % это включает нумерацию глав и секций в документе ниже
 
 \include{1-1-scope}
+\include{1-2-current-state}
 %% \include{20-analysis}
 %% \include{30-design}
 %% \include{40-impl}
