--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -7,6 +7,7 @@
     pages = {},
     title = {An Empirical Analysis of the Utilization of Multiple Programming Languages in Open Source Projects},
     doi = {10.1145/2745802.2745805},
+    language =     "russian"
 }
 
 @inproceedings{professional-developers,
@@ -17,7 +18,8 @@ pages = {},
 title = {On multi-language software development, cross-language links and accompanying tools: a survey of professional software developers},
 volume = {5},
 journal = {Journal of Software Engineering Research and Development},
-doi = {10.1186/s40411-017-0035-z}
+doi = {10.1186/s40411-017-0035-z},
+language =     "russian"
 }
 
 @book{static-program-analysis,
@@ -27,6 +29,7 @@ doi = {10.1186/s40411-017-0035-z}
   month =        {October},
   note =         {Department of Computer Science, Aarhus University,
                   \texttt{http://cs.au.dk/\~{}amoeller/spa/}},
+  language =     "russian"
 }
 
 @online{qt-moc,
@@ -52,7 +55,8 @@ author = {Pfeiffer, Helge and Wasowski, Andrzej},
 year = {2015},
 month = {07},
 pages = {},
-title = {Cross-Language Support Mechanisms Significantly Aid Software Development}
+title = {Cross-Language Support Mechanisms Significantly Aid Software Development},
+language =     "russian"
 }
 
 @book{Johnson1978LintAC,
@@ -85,7 +89,9 @@ year={2001},
 volume={}, 
 number={}, 
 pages={13-22}, 
-keywords={Robustness;Reverse engineering;Maintenance engineering;Data mining;Mars;Application software;Software maintenance;Computer languages;Transaction databases;Libraries}, doi={10.1109/WCRE.2001.957806}}
+keywords={Robustness;Reverse engineering;Maintenance engineering;Data mining;Mars;Application software;Software maintenance;Computer languages;Transaction databases;Libraries}, doi={10.1109/WCRE.2001.957806},
+language =     "russian"
+}
 
 @InProceedings{external-dependencies,
 author="Hosry, Aless
@@ -101,7 +107,8 @@ publisher="Springer Nature Switzerland",
 address="Cham",
 pages="215--232",
 abstract="Successful software requires constant modifications. To guarantee the continuous proper functioning of the applications, developers need to understand them well, particularly by having an accurate map of the dependencies between the parts they are modifying. However, some of these dependencies are not easily identified. For example, in an Android application, there are dependencies between the Java source code and XML parts, some of which are materialized by a generated ``R'' Java class. We call such dependencies external because they are introduced by some agent external to the source code. On top of the categorization of dependencies defined in the literature, we define restrictions on the External Dependencies that allow us to verify the source code and identify possible flaws. We created a common approach relying on reusable patterns to search for containers and entities that are part of such dependencies and implemented it in a prototype that we validate on two different projects from GitHub and developed using different frameworks.",
-isbn="978-3-031-43703-8"
+isbn="978-3-031-43703-8",
+language =     "russian"
 }
 
 @INPROCEEDINGS{pangea,
@@ -122,7 +129,10 @@ isbn="978-3-031-43703-8"
 
   keywords={Java;Object oriented modeling;Analytical models;Software systems;Load modeling;Software corpora;static analysis;empirical study;multi-language},
 
-  doi={10.1109/SCAM.2014.39}}
+  doi={10.1109/SCAM.2014.39},
+  
+  language =     "russian"
+  }
 
 @inproceedings{moose,
 author = {Nierstrasz, Oscar and Ducasse, Stéphane and Gîrba, Tudor},
@@ -132,7 +142,8 @@ pages = {1-10},
 title = {The story of Moose: an agile reengineering environment},
 volume = {30},
 journal = {ACM Sigsoft Software Engineering Notes},
-doi = {10.1145/1095430.1081707}
+doi = {10.1145/1095430.1081707},
+language =     "russian"
 }
 
 @article{famix,
@@ -140,7 +151,8 @@ author = {Demeyer, Serge and Tichelaar, S. and Ducasse, Stéphane},
 year = {2001},
 month = {01},
 pages = {},
-title = {FAMIX 2. 1-the FAMOOS information exchange model}
+title = {FAMIX 2. 1-the FAMOOS information exchange model},
+language =     "russian"
 }
 
 @online{ecma262,
@@ -165,7 +177,8 @@ year = {2018},
 month = {01},
 pages = {362-371},
 title = {Lightweight Call-Graph Construction for Multilingual Software Analysis},
-doi = {10.5220/0006911803620371}
+doi = {10.5220/0006911803620371},
+language =     "russian"
 }
 
 @article{SNDGA,
@@ -175,14 +188,16 @@ doi = {10.5220/0006911803620371}
   year={2019},
   volume={76},
   pages={87 - 121},
-  url={https://api.semanticscholar.org/CorpusID:202733767}
+  url={https://api.semanticscholar.org/CorpusID:202733767},
+  language =     "russian"
 }
 
 @article{polycall,
   title={Effective Call Graph Construction for Multilingual Programs},
   author={Zheng W. \& Hua B.},
   year={2023},
-  url={https://csslab-ustc.github.io/publications/2023/call-graph.pdf}
+  url={https://csslab-ustc.github.io/publications/2023/call-graph.pdf},
+  language =     "russian"
 }
 
 @online{wasm,
@@ -190,5 +205,97 @@ doi = {10.5220/0006911803620371}
   year = {2024},
   url = {https://webassembly.org/},
   urldate = {05.04.2024},
+  language =     "russian"
+}
+
+@article{eCST,
+author = {Rakić, Gordana and Budimac, Zoran},
+year = {2011},
+month = {01},
+pages = {211-214},
+title = {Introducing enriched concrete syntax trees},
+volume = {A},
+journal = {Proc. of the 14th International Multiconference on Information Society (IS), Collaboration, Software And Services In Information Society (CSS)},
+language =     "russian"
+}
+
+@online{rust,
+  title = {Rust programming language},
+  year = {2024},
+  url = {https://www.rust-lang.org/},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
+
+@online{property-graph,
+  title = {Граф свойств},
+  year = {2024},
+  url = {https://github.com/opencypher/openCypher/blob/master/docs/property-graph-model.adoc},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
+
+@online{RDF,
+  title = {Формат RDF},
+  year = {2024},
+  url = {https://www.w3.org/TR/PR-rdf-syntax/Overview.html},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
+
+@article{algorithm-W,
+title = {A theory of type polymorphism in programming},
+journal = {Journal of Computer and System Sciences},
+volume = {17},
+number = {3},
+pages = {348-375},
+year = {1978},
+issn = {0022-0000},
+doi = {https://doi.org/10.1016/0022-0000(78)90014-4},
+url = {https://www.sciencedirect.com/science/article/pii/0022000078900144},
+author = {Robin Milner},
+  language =     "russian"
+}
+
+@inproceedings{scope-graphs,
+  title = {A Theory of Name Resolution},
+  author = {Pierre Néron and Andrew P. Tolmach and Eelco Visser and Guido Wachsmuth},
+  year = {2015},
+  doi = {10.1007/978-3-662-46669-8_9},
+  url = {http://dx.doi.org/10.1007/978-3-662-46669-8_9},
+  researchr = {https://researchr.org/publication/NeronTVW15},
+  cites = {0},
+  citedby = {0},
+  pages = {205-231},
+  booktitle = {Programming Languages and Systems - 24th European Symposium on Programming, ESOP 2015, Held as Part of the European Joint Conferences on Theory and Practice of Software, ETAPS 2015, London, UK, April 11-18, 2015. Proceedings},
+  editor = {Jan Vitek},
+  volume = {9032},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-662-46668-1},
+  language =     "russian"
+}
+
+@inproceedings{scope-graphs-static-analysis,
+author = {Antwerpen, Hendrik and Neron, Pierre and Tolmach, Andrew and Visser, Eelco and Wachsmuth, Guido},
+year = {2016},
+month = {01},
+pages = {49-60},
+title = {A constraint language for static semantic analysis based on scope graphs},
+doi = {10.1145/2847538.2847543},
+language =     "russian"
+}
+
+@techreport{scope-graphs-typed,
+  title = {Language-Independent Type-Dependent Name Resolution},
+  author = {Hendrik van Antwerpen and Pierre Néron and Andrew P. Tolmach and Eelco Visser and Guido Wachsmuth},
+  year = {2015},
+  month = {July},
+  researchr = {https://researchr.org/publication/TUD-SERG-2015-006},
+  cites = {0},
+  citedby = {0},
+  institution = {Delft University of Technology, Software Engineering Research Group},
+  number = {TUD-SERG-2015-006},
+  address = {Delft, The Netherlands},
   language =     "russian"
 }
