--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -58,6 +58,8 @@
 
 \include{1-1-scope}
 \include{1-2-current-state}
+\include{1-3-requirements}
+\include{1-4-crosslingual-analysis}
 %% \include{20-analysis}
 %% \include{30-design}
 %% \include{40-impl}
