--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -299,3 +299,12 @@ language =     "russian"
   address = {Delft, The Netherlands},
   language =     "russian"
 }
+
+@online{lsp-spec,
+  title = {LSP specification},
+  year = {2024},
+  url = {https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
+
