--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -34,9 +34,9 @@
 %% \end{executors}
 
 
-%\listoffigures                         % Список рисунков
+\listoffigures                         % Список рисунков
 
-%\listoftables                          % Список таблиц
+\listoftables                          % Список таблиц
 
 %\NormRefs % Нормативные ссылки 
 % Команды \breakingbeforechapters и \nonbreakingbeforechapters
@@ -60,12 +60,7 @@
 \include{1-2-current-state}
 \include{1-3-requirements}
 \include{1-4-crosslingual-analysis}
-%% \include{20-analysis}
-%% \include{30-design}
-%% \include{40-impl}
-%% \include{50-research}
-%% \include{60-economics}
-%% \include{70-bzd}
+\include{2-1-tooling}
 
 \backmatter %% Здесь заканчивается нумерованная часть документа и начинаются ссылки и
             
