Added lots of TODOs for consistency

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -99,15 +99,8 @@ INI.
 понятий по онтологическим признакам в определенные графы свойств. Таким образом, так или иначе
 такая модель должна реализовывать формат семантической сети в общем случае.
 
-% eCST: https://arxiv.org/pdf/1310.0802.pdf
+\section{Архитектура метода анализа} \label{sec:architecture}
 
-% SPA 
-
-% file:///home/uber/dev/mag/crosslingual-analysis/reports/sem2/%D0%9E%D1%80%D0%BB%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9%D0%9C%D0%AE_%D0%9E%D1%82%D1%87%D0%B5%D1%82_%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0.pdf
-% Различные подходы к семантической инфе 1.3 + проблема модулей
-% file:///home/uber/dev/mag/crosslingual-analysis/reports/sem3/%D0%9E%D1%80%D0%BB%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9%20%D0%9C.%D0%AE.%20%D0%9E%D1%82%D1%87%D0%B5%D1%82%20%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0.pdf
-
-\section{Архитектура метода анализа}
 \subsection{Парсинг мультиязыковых фрагментов кода}
 
 Как было сказано в подразделе \ref{ssec:parsing-problem}, парсинг текста является одной из первых
@@ -240,6 +233,8 @@ INI.
 в ходе построения графа областей и анализа типов идентификаторов решено было ввести дополнительные виды ограничений,
 позволяющих обеспечивать проверку дальнейшую корректности связей в проекте. Ниже перечислены все задействованные
 в методе анализа виды ограничений.
+% TODO: сделать по госту
+% TODO: добавить цвет
 \begin{description} \label{constraints-desc}
     \item[Объявление\slash Ссылка] \
         \\
@@ -347,8 +342,8 @@ INI.
 проекта. Включение в граф областей такой информации может упростить сценарии анализа
 языков сборки и оболочки командной строки.
 Для анализа операционного окружения проекта предполагается отображение такого рода информации в виде
-явных данных в формате ограничений. Таким образом, появляется модуль \textit{провайдер конфигурации}.
-Этот модуль ответственен за отображение данных об операционном окружении в формат ограничений перед
+явных данных в формате ограничений. Таким образом, появляется компонент \textit{провайдер конфигурации}.
+Он ответственен за отображение данных об операционном окружении в формат ограничений перед
 этапом трансляции избранных языков. С его помощью могут быть выражены следующие данные об окружении:
 \begin{itemize}
     \item содержимое файловой системы (через граф областей),
@@ -360,7 +355,9 @@ INI.
  покрыть большую часть сценариев использования метода анализа в контексте различных
  инструментальных средств. 
 
-% TODO: Ограничения на значения?
+% TODO: Ограничения на значения? Да, через intersection types
+% TODO: Окраска графа (по языкам, откуда что пришло, на уровне ограничений)
+% TODO: Онтология где???
 
 \section{Исследование средств реализации}
 
