--- a/tex/rpz.tex
+++ b/tex/rpz.tex
@@ -61,6 +61,8 @@
 \include{1-3-requirements}
 \include{1-4-crosslingual-analysis}
 \include{2-1-tooling}
+\include{2-2-implementation}
+
 
 \backmatter %% Здесь заканчивается нумерованная часть документа и начинаются ссылки и
             
