Solved some todos

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -234,7 +234,6 @@ INI.
 позволяющих обеспечивать проверку дальнейшую корректности связей в проекте. Ниже перечислены все задействованные
 в методе анализа виды ограничений.
 % TODO: сделать по госту
-% TODO: добавить цвет
 \begin{description} \label{constraints-desc}
     \item[Объявление\slash Ссылка] \
         \\
@@ -250,7 +249,7 @@ INI.
     \item[Ассоциация] \
         \\
         \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} идентификатор или переменная, Область видимости; \\
+        \textbf{Вовлекаемые узлы:} идентификатор или переменная, область видимости; \\
         \textbf{Назначение:} <<именование>> определенной
         области видимости, либо указание того что данный идентификатор имеет привязанную область видимости,
     \item[Разрешение] \
@@ -311,7 +310,6 @@ INI.
 оригинальный механизм разрешения имен в графе областей и являются простым расширением, позволяющим добавить
 дополнительную информацию для инструментального средства. Такая информация будет интерпретироваться только
 им и не будет иметь влияния на процессы построения и решения графа.
-
 \subsection{Вовлечение операционного окружения}
 
 Текущее описание метода предполагает однонаправленное взаимодействие с инструментальным средством -- метод,
@@ -355,9 +353,51 @@ INI.
  покрыть большую часть сценариев использования метода анализа в контексте различных
  инструментальных средств. 
 
-% TODO: Ограничения на значения? Да, через intersection types
-% TODO: Окраска графа (по языкам, откуда что пришло, на уровне ограничений)
-% TODO: Онтология где???
+Стоит также заметить, что информация об источнике определенного ограничения может быть полезна для использования
+в инструментальных средствах при интерпретации этих решенных ограничений. Поэтому для каждого ограничения также вводится
+поле об источнике -- пара из пути к файлу/фрагменту и названия языка на котором написан фрагмент. Такой
+подход также позволяет установить \textit{границы} между модулями на различных языках, что может быть полезно
+для определенных проектов. Такие границы позволяют уменьшить количество ложноположительных результатов, если
+известно что определенная пара языков никак не должна взаимодействовать и между фрагментами таких языков не может быть
+междъязыковых связей. 
+
+Примером может служить пара из языка для написания документации(например Markdown) и другого языка программирования.
+Обнаружение таких межъязыковых связей может быть нежелательно для разработчика инструментального средства и
+избежать этого можно путем последующей интрепретации решенных ограничений с учетом межъязыковых границ.
+
+\subsection{Онтология}
+
+Онтологией в данной работе будет называться набор определенных знаний о предметной области конкретного проекта.
+Такое название, хотя и отражает сущность механизма, является немного нестандартным. Дело в том, что
+практически онтология реализуется через создание двух компонентов:
+\begin{itemize}
+    \item типового контекста,
+    \item верификатора структуры подграфа.
+\end{itemize}
+
+Типовый контекст содержит все данные для организации системы типов над графом областей. В исходной работе \cite{scope-graphs-typed}
+представлена более широкая система типов в сравнении с \cite{scope-graphs-static-analysis} так как помимо прочего включает
+механизм подтипирования. Таким образом, в типовый контекст входят обычные типы (англ. ground types), типовые конструкторы
+(например, функциональная стрелка или тип-произведение) и дополнительные конструкции избранной системы типов (например, отношения подтипирования).
+
+Стоит заметить, что такой гибкий подход к системе типов позволяет создавать довольно мощные механизмы разрешения имен. Например,
+появляется возможность связывания объявлений и ссылок не только по именам, но и по \textit{значениям}. Этого можно достичь, используя
+механизм типов пересечений и типов объединений. %TODO: add cite here
+Расширив систему типов таким образом, можно будет присвоить идентификатору сильно ограничивающий тип. В качестве примера можно рассмотреть
+исходный код на языке TypeScript:
+\begin{minted}[linenos=true]{ts}
+const a: 1 | "a" = 1
+const b: 1 | "a" = "a"
+const c: 1 | "a" = true
+\end{minted}
+
+В данном случае определение типа \texttt{1 | "a"} указывает, что идентификатор с такой типовой аннотацией может быть
+привязан либо к значению 1, либо к строке \texttt{"a"}. Таким образом, строка 3 считается ошибочной и в контексте
+разрешения имен это значит, что такое имя никогда не будет связано с переменной иного типа. Такой подход позволяет
+сильно упростить некоторые сценарии наложения ограничений (например, когда необходимо показать что идентификатор всегда связывает
+определенное значение и оно известно наперед).
+
+%TODO: Верификация структуры
 
 \section{Исследование средств реализации}
 
