Added framework figure

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -318,8 +318,8 @@ INI.
 
 Однако, для практической реализации метода неизбежно придется ответить на следующие вопросы:
 \begin{enumerate}[1.]
-    \item как будет происходить выборка кода для анализа?
-    \item каким образом будет учитываться окружение проекта?
+    \item Как будет происходить выборка кода для анализа?
+    \item Каким образом будет учитываться окружение проекта?
 \end{enumerate}
 Стоит рассмотреть каждый вопрос в отдельности.
 
@@ -398,6 +398,16 @@ const c: 1 | "a" = true
 определенное значение и оно известно наперед).
 
 %TODO: Верификация структуры
+
+Подводя итоги подраздела \ref{sec:architecture}, можно составить общую диаграмму потока данных между вовлеченными модулями. Такая
+диаграмма представлена на рисунке \ref{fig:framework}.
+
+\begin{figure}[H]
+    \centering
+    \resizebox{1.05\linewidth}{!}{\includegraphics[height=0.85\textheight]{inc/img/framework}}
+    \caption{Структура метода в виде диаграммы потока данных}
+    \label{fig:framework}
+\end{figure}
 
 \section{Исследование средств реализации}
 
