movin dis todo's

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -310,6 +310,7 @@ INI.
 оригинальный механизм разрешения имен в графе областей и являются простым расширением, позволяющим добавить
 дополнительную информацию для инструментального средства. Такая информация будет интерпретироваться только
 им и не будет иметь влияния на процессы построения и решения графа.
+
 \subsection{Вовлечение операционного окружения}
 
 Текущее описание метода предполагает однонаправленное взаимодействие с инструментальным средством -- метод,
@@ -382,7 +383,7 @@ INI.
 
 Стоит заметить, что такой гибкий подход к системе типов позволяет создавать довольно мощные механизмы разрешения имен. Например,
 появляется возможность связывания объявлений и ссылок не только по именам, но и по \textit{значениям}. Этого можно достичь, используя
-механизм типов пересечений и типов объединений. %TODO: add cite here
+механизм типов пересечений и типов объединений \cite{DEZANICIANCAGLINI1992303}.
 Расширив систему типов таким образом, можно будет присвоить идентификатору сильно ограничивающий тип. В качестве примера можно рассмотреть
 исходный код на языке TypeScript:
 \begin{minted}[linenos=true]{ts}
