--- a/tex/2-2-implementation.tex
+++ b/tex/2-2-implementation.tex
@@ -11,10 +11,10 @@
 Исходя из раздела \ref{sec:architecture} анализатор, реализующий описываемый метод мультиязыкового анализа будет включать в себя следующие
 компоненты:
 \begin{enumerate}[1)]
-    \item провайдер конфигурации,
-    \item компонент извлечения кода,
+    \item провайдер конфигурации и кода,
     \item мультиязыковой транслятор,
-    \item решатель ограничений.
+    \item решатель ограничений,
+    \item адаптер для конкретного инструментального средства (в данном случае LSP сервера).
 \end{enumerate}
 
 % Plantuml?
@@ -23,15 +23,13 @@
 
 \subsection{Реализация онтологии}
 
-\section{Провайдер конфигурации}
-
-\section{Компонент извлечения кода}
+\section{Провайдер конфигурации и кода}
 
 \section{Мультиязыковой транслятор}
 
 \section{Решатель ограничений}
 
-\section{Мультиязыковой анализатор}
+\section{Адаптер инструментального средства}
 
 % TODO: Протокол анализатора
 % TODO: Кэш компонентов
