--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -308,3 +308,16 @@ language =     "russian"
   language =     "russian"
 }
 
+@article{DEZANICIANCAGLINI1992303,
+title = {Intersection types for combinatory logic},
+journal = {Theoretical Computer Science},
+volume = {100},
+number = {2},
+pages = {303-324},
+year = {1992},
+issn = {0304-3975},
+doi = {https://doi.org/10.1016/0304-3975(92)90306-Z},
+url = {https://www.sciencedirect.com/science/article/pii/030439759290306Z},
+author = {Mariangiola Dezani-Ciancaglini and J.Roger Hindley},
+language =     "russian"
+}
