Completed 1-4 fully, without todo's

--- a/tex/1-4-crosslingual-analysis.tex
+++ b/tex/1-4-crosslingual-analysis.tex
@@ -243,7 +243,7 @@ INI.
     \item[Прямое ребро] \
         \\
         \textbf{Вид:} ограничение графа областей; \\
-        \textbf{Вовлекаемые узлы:} две области видимости; \\
+        \textbf{Вовлекаемые узлы:} две области видимости, наименование ребра; \\
         \textbf{Назначение:} обозначение прямой связи
         между областями, моделирование лексических областей видимости,
     \item[Ассоциация] \
@@ -368,15 +368,22 @@ INI.
 
 \subsection{Онтология}
 
-Онтологией в данной работе будет называться набор определенных знаний о предметной области конкретного проекта.
-Такое название, хотя и отражает сущность механизма, является немного нестандартным. Дело в том, что
-практически онтология реализуется через создание двух компонентов:
+Онтологией обычно называется набор определенных знаний о предметной области.
+Однако, в контексте данной работы такой термин будет использоваться для иных целей -- им будет
+обозначаться набор механизмов, позволяющих \textit{обеспечивать консистентность} между различными
+трансляторами различных языков. Такое название для группы данных механизмов было выбрано
+в первую очередь для сохранения изначального смысла определения -- вне зависимости от того,
+каким образом онтология может быть реализована (например, как набор механизмов сохранения консистентности),
+она в любом случае несет в себе важную информацию о предметной области.
+
+Таким образом, с практической точки зрения онтология реализуется через создание двух компонентов:
 \begin{itemize}
     \item типового контекста,
     \item верификатора структуры подграфа.
 \end{itemize}
 
-Типовый контекст содержит все данные для организации системы типов над графом областей. В исходной работе \cite{scope-graphs-typed}
+Типовый контекст содержит все данные для организации <<настраиваемой>> системы типов над графом областей.
+Например, в исходной работе \cite{scope-graphs-typed}
 представлена более широкая система типов в сравнении с \cite{scope-graphs-static-analysis} так как помимо прочего включает
 механизм подтипирования. Таким образом, в типовый контекст входят обычные типы (англ. ground types), типовые конструкторы
 (например, функциональная стрелка или тип-произведение) и дополнительные конструкции избранной системы типов (например, отношения подтипирования).
@@ -387,9 +394,9 @@ INI.
 Расширив систему типов таким образом, можно будет присвоить идентификатору сильно ограничивающий тип. В качестве примера можно рассмотреть
 исходный код на языке TypeScript:
 \begin{minted}[linenos=true]{ts}
-const a: 1 | "a" = 1
-const b: 1 | "a" = "a"
-const c: 1 | "a" = true
+    const a: 1 | "a" = 1
+    const b: 1 | "a" = "a"
+    const c: 1 | "a" = true
 \end{minted}
 
 В данном случае определение типа \texttt{1 | "a"} указывает, что идентификатор с такой типовой аннотацией может быть
@@ -398,7 +405,94 @@ const c: 1 | "a" = true
 сильно упростить некоторые сценарии наложения ограничений (например, когда необходимо показать что идентификатор всегда связывает
 определенное значение и оно известно наперед).
 
-%TODO: Верификация структуры
+В современной индустрии используется большое количество ООП языков: Java, Kotlin, C\#, PHP, TypeScript и многие другие.
+Хотя концепция \textit{класса} и \textit{объекта} примерно одинакова во всех языках, строгого соответствия между
+языками всё же нет. К тому же, в разных языках одинаковые синтаксически определения могут очень сильно отличаться по
+семантике. Например, объект класса в Java всегда будет сравниваться с другим объектом номинально, хотя
+в TypeScript такой же (синтаксически) объект может участвовать в структурном сравнении.
+
+Этот факт, а еще факт того, что концепция модулей в языках программирования в целом тоже довольно сильно
+отличается от языка к языку, вынуждает разработчика транслятора определенного языка учитывать очень
+специфические языковые концепции. Такой подход неизбежно ведет к ограничению количества поддерживаемых в анализе языков
+и переусложнению модели анализа.
+Именно поэтому метод мультиязыкового анализа должен поддерживать максимально
+обобщенное представление -- оно позволяет кодировать различную языковую семантику в единой и краткой форме. Но в таком случае
+появляется проблема согласованности -- специфические конструкции одного языка могут быть представлены не так, как конструкции иного языка, но
+семантически они могут значить одно и то же. Эта проблема \textit{неизбежна}, так как мультиязыковой анализ
+ вовлекает многие независимые трансляторы (на каждый язык), каждый из которых может быть разработан создан любым разработчиком. 
+
+Для решения данной проблемы предполагается использование механизма \textit{структурной верификации}. Ограничения, помимо прочего,
+задают набор \textit{известных фактов}. Эти факты являются начальными данными для алгоритма разрешения имен. Именно
+такие факты должны быть согласованны между трансляторами для того чтобы семантика классов и модулей различных языков
+была отражена единообразно, так как это позволяет производить верное разрешение имен в дальнейшем. Для обеспечения такой
+согласованности можно осуществлять верификацию структуры ограничений на этапе их генерации.
+
+В качестве примера работы такого механизма можно рассмотреть следующий код на C\# взятый из примера проекта на платформе dotnet \cite{eShopOnWeb}:
+
+\begin{minted}[linenos=true, breaklines]{csharp}
+    [ApiExplorerSettings(IgnoreApi = true)]
+    [Authorize]
+    [Route("controller/action")]
+    public class OrderController : Controller
+    {
+        private readonly IMediator _mediator;
+    
+        public OrderController(IMediator mediator)
+        {
+            _mediator = mediator;
+        }
+    
+        [HttpGet]
+        public async Task<IActionResult> MyOrders()
+        {   
+            Guard.Against.Null(User?.Identity?.Name, nameof(User.Identity.Name));
+            var viewModel = await _mediator.Send(new GetMyOrders(User.Identity.Name));
+    
+            return View(viewModel);
+        }
+    
+        [HttpGet("{orderId}")]
+        public async Task<IActionResult> Detail(int orderId)
+        {
+            Guard.Against.Null(User?.Identity?.Name, nameof(User.Identity.Name));
+            var viewModel = await _mediator.Send(new GetOrderDetails(User.Identity.Name, orderId));
+    
+            if (viewModel == null)
+            {
+                return BadRequest("No such order found for this user.");
+            }
+    
+            return View(viewModel);
+        }
+    }
+\end{minted}
+
+Вышеприведенный класс имеет большое количество различных аннотаций (как в определении класса, так и в определении
+методов). Также, он наследует от класса \texttt{Controller}. Однако, на уровне межъязыковых связей, можно
+сказать что этот класс является одним из эндпоинтов веб-сервера, который выполняет различные действия по различным
+HTTP запросам (в данном примере это GET запросы). Разработчику моноязыкового транслятора хотелось бы каким-либо образом извлечь эту информацию
+в формальной форме и структура самого класса в контексте межъязыкового анализа для него
+неинтересна. Для этого хорошо подходит структура задаваемая ограничениями, но они являются слишком абстрактным представлением
+и не поддерживают идею <<абстрактного веб-сервера>> напрямую. Тогда, может быть разработан набор правил верификации
+структуры веб-сервера (приведенных неформально):
+\begin{enumerate}[1)]
+    \item имеет ли модуль название \texttt{WebServer},
+    \item имеет ли он поле \texttt{GET} которое тоже является модулем,
+    \item имеет ли такой модуль поле \texttt{application/json}, 
+    \item имеет ли такое поле схему json (иерархическую структуру, имеющую типы JSON),
+    \item имеет ли модуль \texttt{WebServer} поле \texttt{POST},
+    \item и другие возможные проверки...
+\end{enumerate}
+
+Таким образом, извлекаемые транслятором ограничения могут быть проверены на соответствие такому <<архетипу>> веб-сервера.
+Если ограничения не имеют такую структуру, то транслятор потерял согласованность с другими трансляторами и должен быть доработан.
+
+В итоге, механизм верификации структуры позволяет достичь следующих целей:
+\begin{enumerate}[1)]
+    \item упрощение поддержки мультиязыкового транслятора и согласованности моноязыковых трансляторов,
+    \item поддержка более сложных семантических конструкций на основе классов и модулей (веб-сервер, библиотека, графический ресурс и многие другие),
+    \item облегчение модели анализа с расширенной поддержкой языко-специфичных конструкций (если они выражаемы через механизм классов или модулей).
+\end{enumerate}
 
 Подводя итоги подраздела \ref{sec:architecture}, можно составить общую диаграмму потока данных между вовлеченными модулями. Такая
 диаграмма представлена на рисунке \ref{fig:framework}.
