--- a/tex/12-intro.tex
+++ b/tex/12-intro.tex
@@ -9,4 +9,4 @@
 \item проверить её работоспособность.
 \end{itemize}
 
-\Define{Семантика}{...}
+\Define{Семантика}{смысловое содержание синтаксических конструкций программ}
