--- a/tex/rpz.bib
+++ b/tex/rpz.bib
@@ -321,3 +321,11 @@ url = {https://www.sciencedirect.com/science/article/pii/030439759290306Z},
 author = {Mariangiola Dezani-Ciancaglini and J.Roger Hindley},
 language =     "russian"
 }
+
+@online{eShopOnWeb,
+  title = {Пример приложения интернет-магазина на C\#},
+  year = {2024},
+  url = {https://github.com/dotnet-architecture/eShopOnWeb},
+  urldate = {15.04.2024},
+  language =     "russian"
+}
